--- a/views/a5.html
+++ b/views/a5.html
@@ -59,31 +59,31 @@
 
 <div class="n_main">
     <div class="n_left">
-        <div class="nlef_tit"><a href="http://mtlmjg.com/2/">产品展示</a></div>
+        <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
         <div class="nlef_main">
             <ul>
                 <ul>
 
-                    <li><span><a href="http://mtlmjg.com/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/2/2/">自行车/汽车车棚膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/3/">景观设施膜结构</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/2/4/">充气膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/2/5/">PTFE/ETFE膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/6/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/7/">学校看台</a></span></li>
 
-                    <li><span><a href="http://mtlmjg.com/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/8/">充电桩</a></span></li>
 
                 </ul>
             </ul>
         </div>
-        <div class="nlef_tit"><a href="http://mtlmjg.com/6/">联系我们</a></div>
+        <div class="nlef_tit"><a href="http://localhost/6/">联系我们</a></div>
         <div class="nlef_main1"><strong>淄博景博膜结构工程有限公司</strong> <br>
             电话：13869351802<br>
             地址：山东省淄博市沂源县城鲁山路东段三元市场院内<br>
